syntax = "proto3";

option go_package = ".;seeder_api";

package seeder_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service SeederAPI {
  // Health returns the health of the API.
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc CreateSpendableTransactions(CreateSpendableTransactionsRequest) returns (google.protobuf.Empty) {}
  rpc NextSpendableTransaction(google.protobuf.Empty) returns (NextSpendableTransactionResponse) {}
  rpc ShowAllSpendableTransactions(google.protobuf.Empty) returns (stream NextSpendableTransactionResponse) {}
}

// swagger:model HealthResponse
message HealthResponse {
  bool ok = 1;
  string details = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// swagger:model CreateSpendableTransactionsRequest
message CreateSpendableTransactionsRequest {
  int32 number_of_transactions = 1;
  int32 number_of_outputs = 2;
  int64 satoshis_per_output = 3;
}

// swagger:model NextSpendableTransactionResponse
message NextSpendableTransactionResponse {
  bytes txid = 1;
  int32 number_of_outputs = 2;
  bytes private_key = 3;
  int64 satoshis_per_output = 4;
}
